fix: delete header btn wrap

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -47,6 +47,10 @@
     white-space: nowrap;
     padding: 0 5px;
   }
+  
+  button {
+    white-space: nowrap;
+  }
 }
 
 .header_left {
